# paul-trap-experiment-data

./: .gitignore  LICENSE  README.md  data.xlsx  paultrap.ipynb  paultrap2.ipynb  pyproject.toml  quadrupole_field.py  ring_field.py  simulation.py  simulation3.py
paul_trap_experiment_data_analysis/: paultrap.ipynb
paul_trap_experiment_data_analysis/ODR/: odr_fit.py
quadrupole_field/: __init__.py  config.py  constants.py  field_calculations.py  fields.py  initialize.py  main.py  main2.py  orbit_parameters.py  particle.py  particle_dynamics.py  plot.py  rod.py  simulation.py  stability.py  trap.py  visualization.py
quadrupole_field/core/: __init__.py  particle.py  physical_constants.py  rod.py  trap.py
quadrupole_field/deprecated2/: constants.py  main.py  particle_dynamics.py  visualization.py
quadrupole_field/deprecated_old_simulation_files/: electric_field_ring.py  field_temp.py  simulation2.py
quadrupole_field/old_simulation_files/: quadrupole_field.py  simulation.py
quadrupole_field/plot/: __init__.py  field_visualizer.py  particle_visualizer.py  paul_trap_visualizer.py  plot_config.py  rod_visualizer.py
quadrupole_field/simulation/: __init__.py  config.py  constants.py  parameters.py  simulation.py
quadrupole_field/utils/: cli.py  field_analysis.py  initialization.py  orbit.py  stability.py  stable_orbit_params.py
quadrupole_field/visualization/: __init__.py  config.py  paul_trap_display.py  visualizer.py
quadrupole_field/visualization/components/: __init__.py  field.py  particle.py  rod.py
