[tool.poetry]
package-mode = false
name = "paul-trap-experiment-data"
version = "0.1.0"
description = ""
authors = ["Gadi B <gadibessudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
