[tool.poetry]
package-mode = false
name = "paul-trap-experiment-data"
version = "0.1.0"
description = ""
authors = ["Eitan S <eesadeh@gmail.com>", "Gadi B <gadibessudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
ipython = "^8.30.0"
numpy = "^2.2.0"
dash = "^2.18.2"
plotly = "^5.24.1"
ipywidgets = "^8.1.5"
gradio = "^5.9.1"
isort = "^5.13.2"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^.*/deprecated_old_simulation_files/.*$|
^.*/deprecated2/.*$
'''

[tool.isort]
profile = "black"  # Makes isort compatible with black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = [
    "*/deprecated_old_simulation_files/*",
    "*/deprecated2/*"
]